--- a/app/src/main/res/layout/child_voter.xml
+++ b/app/src/main/res/layout/child_voter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/backLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_11font_mdp"
+        android:textColor="@color/icon_color"
         android:layout_gravity="center"
         android:text="Above Person Address | Part - 1/222"/>
 </LinearLayout>
