--- a/app/src/main/res/layout/dialog_share_slip.xml
+++ b/app/src/main/res/layout/dialog_share_slip.xml
@@ -9,6 +9,7 @@
     android:elevation="@dimen/_3mdp"
     android:layout_margin="@dimen/_35mdp">
     <LinearLayout
+        android:id="@+id/whatsapp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -33,6 +34,7 @@
         android:layout_marginBottom="@dimen/_6mdp"
         android:background="@color/darkGray"/>
     <LinearLayout
+        android:id="@+id/businessWhatsapp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -57,6 +59,7 @@
         android:layout_marginBottom="@dimen/_6mdp"
         android:background="@color/darkGray"/>
     <LinearLayout
+        android:id="@+id/sms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -81,6 +84,7 @@
         android:layout_marginBottom="@dimen/_6mdp"
         android:background="@color/darkGray"/>
     <LinearLayout
+        android:id="@+id/gmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -105,6 +109,7 @@
         android:layout_marginBottom="@dimen/_6mdp"
         android:background="@color/darkGray"/>
     <LinearLayout
+        android:id="@+id/otherShare"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
