--- a/app/src/main/res/menu/add.xml
+++ b/app/src/main/res/menu/add.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/saveBtn"
-        android:title="Save"
-        android:icon="@drawable/refresh_24"
+        android:id="@+id/addSomething"
+        android:title="Add"
+        android:icon="@drawable/add_24"
         app:showAsAction="ifRoom"/>
 </menu>
