--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/saveBtn"
-        android:title="Save"
-        android:icon="@drawable/refresh_24"
+        android:id="@+id/deleteMenu"
+        android:title="Delete"
+        android:icon="@drawable/delete_24"
         app:showAsAction="ifRoom"/>
 </menu>
