--- a/app/src/main/res/layout/activity_parties.xml
+++ b/app/src/main/res/layout/activity_parties.xml
@@ -15,6 +15,7 @@
         android:layout_margin="@dimen/_10mdp"
         android:background="@drawable/bg_white_color_corner8"
         android:elevation="@dimen/_5mdp"
+        android:visibility="gone"
         android:orientation="vertical"
         android:padding="@dimen/_10mdp">
 
