--- a/app/src/main/res/layout/sample_tools_vertical.xml
+++ b/app/src/main/res/layout/sample_tools_vertical.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/_5mdp"
     android:padding="@dimen/_5mdp"
+    android:id="@+id/sample_back_layout"
     android:orientation="horizontal">
 
     <ImageView
