--- a/app/src/main/res/layout/activity_child_or_new_voter.xml
+++ b/app/src/main/res/layout/activity_child_or_new_voter.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.SearchActivity">
+    tools:context=".Activities.ChildOrNewVoter">
 
-    <TextView
-        android:id="@+id/selectedNo"
+    <LinearLayout
+        android:id="@+id/typeLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="selected people"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="@dimen/_5mdp"
-        android:visibility="gone"
-        android:background="@color/light_orange"
-        android:textColor="@color/orange"
         android:layout_gravity="center"
-        android:textSize="@dimen/_11font_mdp"/>
+        android:padding="5dp"
+        android:layout_marginTop="@dimen/_10mdp"
+        android:layout_marginEnd="@dimen/_10mdp"
+        android:layout_marginStart="@dimen/_10mdp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/bg_dark_gray_corner8">
+        <Spinner
+            android:id="@+id/spinnerS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/searchLayout"
@@ -27,7 +34,7 @@
         android:orientation="horizontal"
         android:visibility="visible"
         android:background="@drawable/bg_white_color_corner8"
-        app:layout_constraintTop_toBottomOf="@id/selectedNo"
+        app:layout_constraintTop_toBottomOf="@id/typeLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/_10mdp">
@@ -56,6 +63,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+             android:visibility="gone"
             android:layout_gravity="center"
             android:background="@drawable/bg_dark_gray_corner8"
             android:orientation="horizontal">
@@ -108,23 +116,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_8mdp"
-        android:text="Load More ...."
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:background="@drawable/click_effect_back"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/progressBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <Button
-        android:id="@+id/shareSlip"
-        android:layout_width="0dp"
-        android:layout_margin="@dimen/_8mdp"
-        android:layout_height="wrap_content"
-        android:text="Share Voter Slip"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:background="@drawable/click_effect_red_gray"
+        android:text="Load More.."
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/progressBar"
         app:layout_constraintStart_toStartOf="parent"
