--- a/app/src/main/res/menu/add.xml
+++ b/app/src/main/res/menu/add.xml
@@ -7,4 +7,9 @@
         android:title="Add"
         android:icon="@drawable/add_24"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/refreshSomething"
+        android:title="Refresh"
+        android:icon="@drawable/refresh_24"
+        app:showAsAction="ifRoom"/>
 </menu>
