--- a/app/src/main/res/layout/activity_voter_details.xml
+++ b/app/src/main/res/layout/activity_voter_details.xml
@@ -102,7 +102,10 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="Name : Person Name"
-                android:textColor="@color/black"
+                android:textColor="@color/orange"
+                android:paddingStart="@dimen/_5mdp"
+                android:paddingEnd="@dimen/_5mdp"
+                android:background="@drawable/bg_light_orange"
                 android:textSize="@dimen/_12font_mdp" />
             <TextView
                 android:id="@+id/serialNo"
@@ -146,24 +149,39 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10mdp"
             android:layout_marginEnd="@dimen/_10mdp"
+            android:layout_marginTop="@dimen/_5mdp"
+            android:layout_marginBottom="@dimen/_5mdp"
+            android:padding="@dimen/_10mdp"
+            android:elevation="@dimen/_3mdp"
+            android:background="@drawable/bg_dark_gray_corner8"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/houseNo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_5mdp"
-                android:text="House No : A12/522"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12font_mdp" />
-            <TextView
-                android:id="@+id/section"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/_5mdp"
-                android:text="Section : A12/522"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12font_mdp" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/houseNo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_5mdp"
+                    android:text="House No : A12/522"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12font_mdp" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/section"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_5mdp"
+                    android:text="Section : A12/522"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12font_mdp" />
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/boothName"
                 android:layout_width="wrap_content"
@@ -182,6 +200,25 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
             <TextView
+                android:id="@+id/newAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_5mdp"
+                android:visibility="gone"
+                android:text="New Address : NA"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12font_mdp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10mdp"
+            android:layout_marginEnd="@dimen/_10mdp"
+            android:padding="@dimen/_10mdp"
+            android:orientation="vertical">
+
+            <TextView
                 android:id="@+id/phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -192,37 +229,39 @@
                 android:text="Mobile No : 9876543210 |  8978564523"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
-            <TextView
-                android:id="@+id/dob"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_5mdp"
-                android:drawableTint="@color/icon_color"
-                android:drawablePadding="@dimen/_5mdp"
-                android:drawableEnd="@drawable/edit_24"
-                android:text="DOB : __ /__ / ____"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12font_mdp" />
-            <TextView
-                android:id="@+id/doa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/_5mdp"
-                android:drawableTint="@color/icon_color"
-                android:drawablePadding="@dimen/_5mdp"
-                android:drawableEnd="@drawable/edit_24"
-                android:text="DOA : __ /__ / ____"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12font_mdp" />
-            <TextView
-                android:id="@+id/newAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/_5mdp"
-                android:visibility="gone"
-                android:text="New Address : NA"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12font_mdp" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/dob"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_5mdp"
+                    android:drawableTint="@color/icon_color"
+                    android:drawablePadding="@dimen/_5mdp"
+                    android:drawableEnd="@drawable/edit_24"
+                    android:text="DOB : __ /__ / ____"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12font_mdp" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/doa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_5mdp"
+                    android:gravity="end"
+                    android:layout_gravity="end"
+                    android:drawableTint="@color/icon_color"
+                    android:drawablePadding="@dimen/_5mdp"
+                    android:drawableEnd="@drawable/edit_24"
+                    android:text="DOA : __ /__ / ____"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12font_mdp" />
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -260,7 +299,6 @@
                 android:padding="@dimen/_5mdp"
                 android:text="Residential Status : "
                 android:visibility="visible"
-                android:layout_marginTop="@dimen/_10mdp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
             <RadioGroup
@@ -287,6 +325,29 @@
                     android:text="Dead"/>
             </RadioGroup>
         </LinearLayout>
+        <Button
+            android:id="@+id/wishBirthday"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/_8mdp"
+            android:layout_height="wrap_content"
+            android:text="Wish Happy Birthday!"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@drawable/click_effect_red_gray"
+            android:visibility="gone"/>
+        <Button
+            android:id="@+id/wishAnni"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/_8mdp"
+            android:layout_height="wrap_content"
+            android:text="Wish Anniversary!"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@drawable/click_effect_red_gray"
+            android:visibility="gone"/>
+
+
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
