First API Tested

--- a/app/src/main/res/drawable/bg_dark_yellow.xml
+++ b/app/src/main/res/drawable/bg_dark_yellow.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+<!--    <solid-->
+<!--        android:color="#FF9800"/>-->
     <solid
-        android:color="#FF9800"/>
+        android:color="#FFF06B"/>
     <corners
         android:radius="@dimen/_5mdp"/>
 </shape>
